added bg change effect for clicks

--- a/index.html
+++ b/index.html
@@ -13,34 +13,34 @@
 <body>
     <div class="globalContainer">
         <div class="rowContainer1 display">0</div>
-        <div class="rowContainer2">
-            <div class="acCont">AC</div>
-            <div class="plusMinusCont">+/-</div>
-            <div class="percentageCont">%</div>
-            <div class="divideCont">/</div>
+        <div class="rowContainer2 rowContainer">
+            <div class="acCont button blue">AC</div>
+            <div class="plusMinusCont button blue">+/-</div>
+            <div class="percentageCont button blue">%</div>
+            <div class="divideCont button orange">/</div>
         </div>
-        <div class="rowContainer3">
-            <div class="sevenCont">7</div>
-            <div class="eightCont">8</div>
-            <div class="nineCont">9</div>
-            <div class="multiplyCont">*</div>
+        <div class="rowContainer3 rowContainer">
+            <div class="sevenCont button turquoise">7</div>
+            <div class="eightCont button turquoise">8</div>
+            <div class="nineCont button turquoise">9</div>
+            <div class="multiplyCont button orange">*</div>
         </div>
-        <div class="rowContainer4">
-            <div class="fourCont">4</div>
-            <div class="fiveCont">5</div>
-            <div class="sixCont">6</div>
-            <div class="subtractCont">-</div>
+        <div class="rowContainer4 rowContainer">
+            <div class="fourCont button turquoise">4</div>
+            <div class="fiveCont button turquoise">5</div>
+            <div class="sixCont button turquoise">6</div>
+            <div class="subtractCont button orange">-</div>
         </div>
-        <div class="rowContainer5">
-            <div class="oneCont">1</div>
-            <div class="twoCont">2</div>
-            <div class="threeCont">3</div>
-            <div class="addCont">+</div>
+        <div class="rowContainer5 rowContainer">
+            <div class="oneCont button turquoise">1</div>
+            <div class="twoCont button turquoise">2</div>
+            <div class="threeCont button turquoise">3</div>
+            <div class="addCont button orange">+</div>
         </div>
-        <div class="rowContainer6">
-            <div class="zeroCont">0</div>
-            <div class="dotCont">.</div>
-            <div class="equalCont">=</div>
+        <div class="rowContainer6 rowContainer">
+            <div class="zeroCont button turquoise">0</div>
+            <div class="dotCont button turquoise">.</div>
+            <div class="equalCont button orange">=</div>
         </div>
     </div>
 </body>
