Added logic to number and operator buttons
-added logic for numberic buttons
-added logic for +, -, /, *, %, +/-, =, AC buttons

--- a/index.html
+++ b/index.html
@@ -14,33 +14,33 @@
     <div class="globalContainer">
         <div class="rowContainer1 display">0</div>
         <div class="rowContainer2 rowContainer">
-            <div class="acCont button blue">AC</div>
-            <div class="plusMinusCont button blue">+/-</div>
-            <div class="percentageCont button blue">%</div>
-            <div class="divideCont button orange">/</div>
+            <div class="acCont button blue operator clear">AC</div>
+            <div class="plusMinusCont button blue operator">+/-</div>
+            <div class="percentageCont button blue operator">%</div>
+            <div class="divideCont button orange operator">/</div>
         </div>
         <div class="rowContainer3 rowContainer">
-            <div class="sevenCont button turquoise">7</div>
-            <div class="eightCont button turquoise">8</div>
-            <div class="nineCont button turquoise">9</div>
-            <div class="multiplyCont button orange">*</div>
+            <div class="sevenCont button turquoise number">7</div>
+            <div class="eightCont button turquoise number">8</div>
+            <div class="nineCont button turquoise number">9</div>
+            <div class="multiplyCont button orange operator">*</div>
         </div>
         <div class="rowContainer4 rowContainer">
-            <div class="fourCont button turquoise">4</div>
-            <div class="fiveCont button turquoise">5</div>
-            <div class="sixCont button turquoise">6</div>
-            <div class="subtractCont button orange">-</div>
+            <div class="fourCont button turquoise number">4</div>
+            <div class="fiveCont button turquoise number">5</div>
+            <div class="sixCont button turquoise number">6</div>
+            <div class="subtractCont button orange operator">-</div>
         </div>
         <div class="rowContainer5 rowContainer">
-            <div class="oneCont button turquoise">1</div>
-            <div class="twoCont button turquoise">2</div>
-            <div class="threeCont button turquoise">3</div>
-            <div class="addCont button orange">+</div>
+            <div class="oneCont button turquoise number">1</div>
+            <div class="twoCont button turquoise number">2</div>
+            <div class="threeCont button turquoise number">3</div>
+            <div class="addCont button orange operator">+</div>
         </div>
         <div class="rowContainer6 rowContainer">
-            <div class="zeroCont button turquoise">0</div>
-            <div class="dotCont button turquoise">.</div>
-            <div class="equalCont button orange">=</div>
+            <div class="zeroCont button turquoise number">0</div>
+            <div class="dotCont button turquoise point">.</div>
+            <div class="equalCont button orange operator equal">=</div>
         </div>
     </div>
 </body>
