Changed working of handleOverflow func & bug fixes

--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
         </div>
         <div class="rowContainer6 rowContainer">
             <div class="zeroCont button turquoise number">0</div>
-            <div class="dotCont button turquoise operator point">.</div>
+            <div class="dotCont button turquoise number point">.</div>
             <div class="equalCont button orange operator equal">=</div>
         </div>
     </div>
