Fixed bugs related to CE

--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
         <div class="rowContainer1 display">0</div>
         <div class="rowContainer2 rowContainer">
             <div class="acCont button blue operator clear">AC</div>
+            <div class="ceCont button blue number clearEntered">CE</div>
             <div class="percentageCont button blue operator">%</div>
             <div class="divideCont button orange operator">/</div>
         </div>
